# med-exam-kit

./: .gitignore  COMMAND.md  LICENSE  Makefile  README.md  config.yaml  go.mod  go.sum  main.go  pyproject.toml  setup.py
.github/workflows/: build-py.yml  build.yml  release-go.yml  release.yml
assets/static/: common.css  common.js  editor.css  editor.js  manifest.json  quiz.css  quiz.js  quiz_ai.js  quiz_sync.js  smd.min.js  sw.js
assets/templates/: editor.html  quiz.html
cmd/: assets.go  build.go  config.go  db.go  db_nopg.go  editor.go  editor_nopg.go  enrich.go  export.go  generate.go  groups.go  imgmigrate.go  info.go  inspect.go  quiz.go  quiz_nopg.go  reindex.go  reload.go  root.go  watcher.go
data/output/: .gitkeep
data/raw/: .gitkeep
internal/ai/: checkpoint.go  client.go  enricher.go  prompt.go  result.go
internal/auth/: auth.go
internal/bank/: bank.go  bank_test.go  fernet.go  fernet_test.go
internal/dedup/: dedup.go  dedup_test.go
internal/exam/: config.go  docx_exporter.go  generator.go
internal/exporters/: base.go  csv.go  db.go  docx.go  exporters_test.go  json.go  pdf.go  xlsx.go
internal/filters/: filters.go  filters_test.go
internal/loader/: loader.go
internal/logger/: logger.go
internal/models/: models.go  models_test.go
internal/parsers/: ahuyikao.go  parsers_test.go  registry.go  yikaobang.go
js/: ah.js  yhf.js  ykb.js
js/医海医考/: README.md  (+4 more)
miniapp/: MINIAPP_SERVER_PATCH.md  app.js  app.json  app.wxss  project.config.json
tests/: test_basic.py  test_exporters.py  test_filters_bank_sm2.py  test_variable_options.py
(+116 files in other folders)
